deploymentconfig.yml
kind: "DeploymentConfig"
apiVersion: "apps.openshift.io/v1"
metadata:
  name: "deployment-fiap-grupo26"
  namespace: "mbaaso-grupo26"
spec:
  template: 
    metadata:
      labels:
        name: "deployment-fiap-grupo26"
        app: deployment-fiap-grupo26
    spec:
      containers:
        - name: "deployment-fiap-grupo26"
          image: "openshift/blog-django-py-git"
          ports:
            - containerPort: 8080
              protocol: "TCP"
  replicas: 1 
  triggers:
    - type: "ConfigChange" 
    - type: "ImageChange" 
      imageChangeParams:
        automatic: true
        containerNames:
          - "deployment-fiap-grupo26"
        from:
          kind: "ImageStreamTag"
          name: "blog-django-py-git:latest"
  strategy: 
    type: "Rolling"
  paused: false 
  revisionHistoryLimit: 2 
  minReadySeconds: 0
