full.yml

kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: database-fiap-grupo26
  labels:
    app: database-fiap-grupo26
    app.kubernetes.io/component: database-fiap-grupo26
    app.kubernetes.io/instance: database-fiap-grupo26
    template: postgresql-persistent-template
spec:
  strategy:
    type: Recreate
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - postgresql
        from:
          kind: ImageStreamTag
          namespace: openshift
          name: 'postgresql:latest'
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    name: database-fiap-grupo26
  template:
    metadata:
      labels:
        name: database-fiap-grupo26
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      volumes:
        - name: database-fiap-grupo26-data
          persistentVolumeClaim:
            claimName: database-fiap-grupo26
      containers:
        - resources:
            limits:
              memory: 512Mi
          readinessProbe:
            exec:
              command:
                - /usr/libexec/check-container
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          name: postgresql
          livenessProbe:
            exec:
              command:
                - /usr/libexec/check-container
                - '--live'
            initialDelaySeconds: 120
            timeoutSeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          securityContext:
            capabilities: {}
            privileged: false
          ports:
            - containerPort: 5432
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: database-fiap-grupo26-data
              mountPath: /var/lib/pgsql/data
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
---

apiVersion: v1
kind: Service
metadata:
  name: service-database-fiap-grupo26
spec:
  selector:
    name: database-fiap-grupo26
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
---

kind: "DeploymentConfig"
apiVersion: "apps.openshift.io/v1"
metadata:
  name: "deployment-fiap-grupo26"
spec:
  template: 
    metadata:
      labels:
        name: "deployment-fiap-grupo26"
        app: deployment-fiap-grupo26
    spec:
      containers:
        - name: "deployment-fiap-grupo26"
          image: "openshift/blog-django-py-git"
          ports:
            - containerPort: 8080
              protocol: "TCP"
  replicas: 1 
  triggers:
    - type: "ConfigChange" 
    - type: "ImageChange" 
      imageChangeParams:
        automatic: true
        containerNames:
          - "deployment-fiap-grupo26"
        from:
          kind: "ImageStreamTag"
          name: "blog-django-py-git:latest"
  strategy: 
    type: "Rolling"
  paused: false 
  revisionHistoryLimit: 2 
  minReadySeconds: 0 
---

apiVersion: v1
kind: Service
metadata:
  name: service-fiap-grupo26
spec:
  selector:
    name: deployment-fiap-grupo26
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-fiap-grupo26
spec:
  to:
    kind: Service
    name: service-fiap-grupo26
  port:
    targetPort: 8080
